correction visible côté étudiant

--- a/public/stylesheets/play_student.css
+++ b/public/stylesheets/play_student.css
@@ -77,3 +77,10 @@ html {
 .reponse.to_correct.selected {
     box-shadow: 0 0 8px 10px black, inset 0 0 0px 6px black;
 }
+
+.reponse .correcArea {
+    background-color: rgba(200, 0, 0, 0.5);
+    padding: 5px;
+    color: black;
+    
+}
